# thrift-ipc-demo

./: .gitignore  LICENSE  README.md  Taskfile.yml  go.mod  hello.thrift  main.py  pyproject.toml
cmd/server/: main.go
internal/graceful/: run.go
internal/stdio/: server.go  transport.go
internal/thrift/hello/: GoUnusedProtection__.go  hello-consts.go  hello.go
