[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Cylix Lee", email = "cylix.lee@outlook.com" }]
requires-python = ">=3.12"
dependencies = ["thrift>=0.23.0"]

[dependency-groups]
dev = ["nuitka>=4.1"]

[tool.ruff]
exclude = ["src/client/generated"]
line-length = 120

[tool.basedpyright]
ignore = ["src/client/generated"]
reportMissingTypeStubs = false
reportIncompatibleMethodOverride = false
reportUnusedCallResult = false
